--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css?family=Raleway&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
